log
Sun May  3 09:11:17 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
72ac9d4
Sun May  3 09:32:01 PM UTC 2026: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
84086f1
Sun May  3 09:58:14 PM UTC 2026: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:74:24: error: ‘TreeNode’ has no member named ‘current’
   74 |             return temp->current->pair;
      |                        ^~
treemap.c:77:23: error: ‘TreeMap’ has no member named ‘lowerthan’; did you mean ‘lower_than’?
   77 |         else if(tree->lowerthan(key,temp->pair->key) == 1)
      |                       ^~~~~~~~~
      |                       lower_than
85e0b24
Sun May  3 09:58:46 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:23: error: ‘TreeMap’ has no member named ‘lowerthan’; did you mean ‘lower_than’?
   77 |         else if(tree->lowerthan(key,temp->pair->key) == 1)
      |                       ^~~~~~~~~
      |                       lower_than
0242f9f
Sun May  3 09:59:12 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
2ebe617
Sun May  3 10:22:57 PM UTC 2026: 
 treemap.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:106:7: error: ‘true’ undeclared (first use in this function)
  106 | while(true)
      |       ^~~~
treemap.c:7:1: note: ‘true’ is defined in header ‘<stdbool.h>’; this is probably fixable by adding ‘#include <stdbool.h>’
    6 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    7 | 
treemap.c:106:7: note: each undeclared identifier is reported only once for each function it appears in
  106 | while(true)
      |       ^~~~
47360a1
